# fpl-points-predictor

./: .coverage  .gitignore  4. environment.yml  AI_USAGE.md  NOTEBOOKtests.ipynb  PROPOSAL.md  README.md  download_data_instructions.md  environment.yml  main.py  notebook-cleaning-data.ipynb  project_report.md  pyproject.toml  requirements.txt
1. src/: cli.py  odds_pipeline.py
2. data/processed/: players_all_seasons.csv
4. tests/: test_bookmaker_benchmark.py  test_cli.py
data/processed/: bet365odds_epl_2016_23.csv  bet365odds_season_24_25.csv  epl_fixtures_2016_23.csv  players_all_seasons.csv
fpl_points_predictor.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: models-comparison.ipynb
results/metrics/: gbm_seasonal_metrics_by_position.csv  gw_leaderboard.json  gw_metrics_detailed.csv  gw_metrics_detailed.md  gw_metrics_detailed.txt  gw_metrics_summary.txt
results/predictions/: sample10_random_players_random_gw__gbm_seasonal.csv  sample10_random_players_random_gw__gbm_seasonal.md  sample_match_team_strength__2022_23__gbm_seasonal_top11.csv  sample_match_team_strength__2022_23__gbm_seasonal_top11.md
results/tables/: best_player_random_gw.csv  best_player_random_gw.md  team_top5.csv  (+11 more)
src/: __init__.py  bookmaker_benchmark.py  bookmaker_comparison.py  cli.py  data_loader.py  data_pipeline.py  evaluation.py  fixtures_pipeline.py  fpl_kaggle_import.py  model.py  models.py  odds_pipeline.py  reporting.py
tests/: test_cli.py  test_data_loader.py  test_data_pipeline.py  test_evaluation.py  test_model.py  test_models.py  test_models_advanced.py  test_odds_pipeline.py
