[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-points-predictor"
version = "0.1.0"
description = "Fantasy Premier League points predictor"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

